# src/api/generated/src/server/mod.rs
@@ -4275,10 +4275,45 @@ where
 
     let resp = match result {
         Ok(rsp) => match rsp {
-            apis::templates::TemplatesGetResponse::Status200_SuccessfullyReturnedAllTemplates(
+            apis::templates::TemplatesGetResponse::Status200_SuccessfullyReturnedAllTemplates {
                 body,
-            ) => {
+                x_next_token,
+            } => {
+                if let Some(x_next_token) = x_next_token {
+                    let x_next_token = match header::IntoHeaderValue(x_next_token).try_into() {
+                        Ok(val) => val,
+                        Err(e) => {
+                            return Response::builder()
+                                                                    .status(StatusCode::INTERNAL_SERVER_ERROR)
+                                                                    .body(Body::from(format!("An internal server error occurred handling x_next_token header - {e}"))).map_err(|e| { error!(error = ?e); StatusCode::INTERNAL_SERVER_ERROR });
+                        }
+                    };
+
+                    {
+                        let mut response_headers = response.headers_mut().unwrap();
+                        response_headers
+                            .insert(HeaderName::from_static("x-next-token"), x_next_token);
+                    }
+                }
                 let mut response = response.status(200);
+                {
+                    let mut response_headers = response.headers_mut().unwrap();
+                    response_headers
+                        .insert(CONTENT_TYPE, HeaderValue::from_static("application/json"));
+                }
+
+                let body_content = tokio::task::spawn_blocking(move || {
+                    serde_json::to_vec(&body).map_err(|e| {
+                        error!(error = ?e);
+                        StatusCode::INTERNAL_SERVER_ERROR
+                    })
+                })
+                .await
+                .unwrap()?;
+                response.body(Body::from(body_content))
+            }
+            apis::templates::TemplatesGetResponse::Status400_BadRequest(body) => {
+                let mut response = response.status(400);
                 {
                     let mut response_headers = response.headers_mut().unwrap();
                     response_headers
